# tinitorch

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
csrc/: CMakeLists.txt  binding.cpp
csrc/include/ttcore/: broadcast.h  device.h  dispatch.h  dtype.h  kernels.h  ops.h  storage.h  tensor_impl.h
csrc/ttcore/: broadcast.cpp  dispatch.cpp  dtype.cpp  ops.cpp  tensor_impl.cpp
csrc/ttcore/kernels/: cpu_activation.cpp  cpu_elementwise.cpp  cpu_matmul.cpp
src/tinitorch/: __init__.py  backend.py  creation.py  device.py  dtype.py  storage.py  tensor.py  tensor_impl_py.py
src/tinitorch/nn/: __init__.py  activation.py  container.py  linear.py  module.py
src/tinitorch/ops/: __init__.py  math.py
src/tinitorch/tgir/: __init__.py  ir.py  serialization.py  tracer.py
tests/: test_broadcast.py  test_creation.py  test_nn.py  test_ops.py  test_storage.py  test_tensor.py  test_tensor_methods.py  test_tgir.py
