[project]
name = "tinitorch"
version = "0.1.0"
description = "A torch-like deep learning library"
readme = "README.md"
authors = [
    { name = "yichi170", email = "yichi170@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
